# daily-discord-summarizer

./: .gitignore  Cargo.toml  README.md  config.toml
.sqlx/: query-4c3f2d94167ee6b3f2ad7143827dbef9592a3a3189bf2d3d5cd37e4c9cfdec36.json  query-4ef53fe1180004c39eec927e93b17d4288ab5c66e0811e81122bb1f0d86d4050.json  query-7657f0aeb9578fbbb264337613039d7d7269819c1354d67f900212df8fe009b0.json  query-92b80ca48abf64207002e3c65e37260a9884d1cb7e8e7afa6ef780f9a89a4256.json  query-caebf7f27a1627b55b7c317d87ca97fbf4af207f7dcbaa628f2195a7afd194d6.json  query-d41ff168105f17e16ae255f79fcc377ddfdc0001c959b50229bb149c0f5f081a.json  query-e50f96f73e5c87af43d62906ef3f1752c699dbdcb65794ac023a8ab3d6929d12.json
migrations/: 20231201181151_initial_migration.sql
src/: config.rs  db.rs  gpt.rs  http_api.rs  main.rs
src/services/: digests.rs  discord_handler.rs  message_listener.rs  mod.rs  summarizer.rs
