[package]
name = "daily-discord-summarizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.10", features = ["derive"] }
config = "0.13.4"
dotenv = "0.15.0"
eyre = "0.6.9"
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "collector",
    "framework",
    "model",
    "standard_framework",
    "utils",
    "tokio_task_builder",
    "rustls_backend",
]
version = "0.12"
